# Liglauncher

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  release.yml
liglauncher/: __init__.py  __main__.py  config.py  log.py  paths.py
liglauncher/core/: auth.py  installer.py  launcher.py  versions.py
liglauncher/ui/: app.py  theme.py
